--- a/style.scss
+++ b/style.scss
@@ -26,7 +26,10 @@
             justify-content: center;
             align-items: center;
             text-align: center;
-            margin-top: 2.4rem;
+            img{
+                width: 100px;
+                height: auto;
+            }
             li{
                 a{
                     text-decoration: none;
