--- a/css/style.css
+++ b/css/style.css
@@ -457,7 +457,7 @@ footer{
     position: absolute;
     top: 10px;
     left: 10px;
-    width: 120px;
+    min-width: 120px;
     z-index: 12;
 }
 .hamberger{
