--- a/css/style.css
+++ b/css/style.css
@@ -332,6 +332,7 @@
     background: var(--dark);
     clip-path: polygon(0 0, 100% 0, 100% 100%, 67% 90%, 0 100%);
     padding-bottom: 13rem;
+    text-transform: capitalize;
 }
 .blog .card-wrapper{
     display: grid;
@@ -340,6 +341,9 @@
 }
 .blog .card-wrapper .card{
     background: var(--pure);
+}
+.card .img-wrapper{
+    max-height: 260px;
 }
 .blog .card-wrapper .card .img-wrapper img{
     width: 100%;
@@ -435,6 +439,13 @@ footer{
     align-items: center;
     padding: 4rem;
     color: var(--light);
+}
+footer h2{
+    color: #fff;
+    cursor: pointer;
+}
+footer h2 span{
+    color: #3dcfd3;
 }
 .footer-icon nav{
     list-style: none;
