--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,11 @@
      box-sizing: border-box;
  }
  header{
-    background: var(--dark);
+    /* background: var(--dark); */
+    background: url(../images/shahidul_Shakil.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 70% 90%, 0 100%);
  }
  .container{
@@ -53,12 +57,15 @@
      padding: 3rem 0;
      width: 100%;
      height: 85vh;
+     gap: 1rem;
     }
     .hero .left img{
         width: 395px;
         width: 100%;
         height: auto;
         object-fit:cover;
+        border-radius: 50%;
+        /* border: 1px solid var(--primary); */
     }
     .hero .right{
      color: var(--pure);
